Moving some files to have a better organized structure and adding more components

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,6 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>MyRunHub</title>
 </head>
-<body class="mobile-shift">
-  <section id="application"></section>
+<body class="mobile-shift" id="application">
 </body>
 </html>
